// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/select/Select should not show Tooltip when no error exists 1`] = `
<div
  className="select-input-container"
>
  <Label
    hideLabel={false}
    text="label"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      position="middle-right"
      text=""
      theme="error"
    >
      <span
        className="select-container"
      >
        <span
          className="select-container-inner"
        >
          <select />
          <span
            className="select-overlay"
          />
        </span>
      </span>
    </Tooltip>
  </Label>
</div>
`;

exports[`components/select/Select should not show error outline if not specified 1`] = `
<div
  className="select-input-container"
>
  <Label
    hideLabel={false}
    text="label"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      position="middle-right"
      text=""
      theme="error"
    >
      <span
        className="select-container"
      >
        <span
          className="select-container-inner"
        >
          <select />
          <span
            className="select-overlay"
          />
        </span>
      </span>
    </Tooltip>
  </Label>
</div>
`;

exports[`components/select/Select should render infoTooltip when specified 1`] = `
<div
  className="select-input-container"
>
  <Label
    hideLabel={false}
    text="Album"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      position="middle-right"
      text=""
      theme="error"
    >
      <span
        className="select-container"
      >
        <span
          className="select-container-inner"
        >
          <select
            name="select"
          />
          <span
            className="select-overlay"
          />
        </span>
        <Tooltip
          constrainToScrollParent={false}
          constrainToWindow={true}
          isDisabled={false}
          isShown={false}
          position="middle-right"
          targetWrapperClassName="bdl-Select-tooltipIcon"
          text="hello!!!"
          theme="default"
        >
          <PlainButton
            onClick={[Function]}
            type="button"
          >
            <IconInfo
              height={16}
              title="hello"
              width={16}
            />
          </PlainButton>
        </Tooltip>
      </span>
    </Tooltip>
  </Label>
</div>
`;

exports[`components/select/Select should show Tooltip when error exists 1`] = `
<div
  className="select-input-container show-error"
>
  <Label
    hideLabel={false}
    text="label"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-right"
      text="error"
      theme="error"
    >
      <span
        className="select-container"
      >
        <span
          className="select-container-inner"
        >
          <select />
          <span
            className="select-overlay"
          />
        </span>
      </span>
    </Tooltip>
  </Label>
</div>
`;

exports[`components/select/Select should show error outline if specified 1`] = `
<div
  className="select-input-container show-error"
>
  <Label
    hideLabel={false}
    text="label"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      position="middle-right"
      text=""
      theme="error"
    >
      <span
        className="select-container"
      >
        <span
          className="select-container-inner"
        >
          <select />
          <span
            className="select-overlay"
          />
        </span>
      </span>
    </Tooltip>
  </Label>
</div>
`;
